Fixed mismatching colors and fixed spacing

--- a/index.css
+++ b/index.css
@@ -113,13 +113,14 @@ a {
 }
 
 div.container {
-    background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+    background-image: transparent;
 }
 
 img {
     width: 350px;
     height: 500px;
-    display: block;
+    display: flex;
+    flex-direction: row;
     margin-left: auto;
     margin-right:auto;
     margin-top: 100px;
@@ -139,8 +140,7 @@ img {
     align-items: center;
     width: 100%;
     height: 100vh;
-    background-color: var(--main-gray);
-    background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+    background-color: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
 }
 
 .welcome-section > p {
